app/styles/components/customize/_customize_edition_header.scss
.customize-edition-header-container {
  width: 100vw;
  background-color: #fafafa;
  margin-left: calc(50% - 50vw);
}
.customize-edition-header {
  max-width: 1300px;
  padding: 30px 60px;
  margin: auto;
  .lesson-title-section {
    h1 {
      font-size: 18px;
      color: #3b3b3b;
      span {
        font-weight: bold;
        margin-right: 5px;
      }
    }
    p {
      font-size: 14px;
      color: #3b3b3b;
      margin-bottom: 5px;
    }
  }
  .edition-name-and-sample-question-section {
    margin-bottom: 20px;
    .edit {
      font-size: 14px;
      color: #969696;
      display: flex;
      align-items: center;
      margin-bottom: 3px;
      justify-content: flex-end;
      cursor: pointer;
      i {
        font-size: 12px;
        margin-right: 3px;
      }
    }
    .edition-name-and-sample-question {
      min-height: 93px;
      background-color: #ffffff;
      display: flex;
      justify-content: space-between;
      align-items: center;
      cursor: pointer;
      &.missing-name {
        border: solid 1px #ff7370;
      }
    }
    p {
      font-size: 14px;
      color: #3b3b3b;
    }
    h2 {
      font-size: 20px;
      font-weight: bold;
      color: #3b3b3b;
      span {
        font-weight: 600;
        font-style: italic;
        color: #c0c0c0;
      }
    }
    .name, .sample-question {
      padding: 0px 25px;
      width: 50%;
    }
    .name {
      border-right: solid 1px #e9e9e9;
    }
  }
  .note {
    height: 168px;
    background-color: #fff3df;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
    margin-bottom: 50px;
    .text {
      flex: 2;
      padding: 20px 25px;
    }
    .image {
      flex: 1;
    }
    h2 {
      font-size: 18px;
      font-weight: bold;
      color: #3b3b3b;
      margin-bottom: 20px;
    }
    img {
      width: 224px;
      bottom: -84px;
      right: 0px;
      position: absolute;
    }
    span {
      right: 7px;
      cursor: pointer;
      font-size: 10px;
      color: #ea9a1a;
      top: -80;
      position: absolute;
    }
    a {
      color: #027360;
      text-decoration: underline;
    }
  }
}

